<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/bCustomer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/go_shopping"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:visibility="visible">

        <Button
            android:id="@+id/bReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/login_link"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />
    </TableRow>

</TableLayout>